// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Scroll Area. should call addScrollArea when mounting. 1`] = `
Array [
  "mock-id",
  <div>
    <h1>
      Test
    </h1>
  </div>,
]
`;

exports[`Test Scroll Area. should call removeScrollArea when unmounting. 1`] = `
Array [
  "mock-id",
]
`;

exports[`Test Scroll Area. should render correctly. 1`] = `
<div>
  <div
    class="foo"
  >
    <h1>
      Test
    </h1>
  </div>
</div>
`;
